--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "aerialship/lightsaml",
+    "name": "awakit/lightsaml",
     "license": "MIT",
     "type": "project",
     "description": "Light SAML2 php library",
